# ToolFlood

./: .gitignore  README.md  SECURITY.md  pyproject.toml  requirements.txt
config/: config.yaml  models.yaml
data/ToolBench/: tools.json
data/ToolBench/tasks/: task_10_air_quality.json  task_1_email_validation.json  task_2_financial_insights.json  task_3_fitness_health.json  task_4_sms_communications.json  task_5_food_recipe.json  task_6_medical_health.json  task_7_music_experiences.json  task_8_route_planning.json  task_9_movie_discovery.json
data/ToolE/: tasks.json  tools.json  tools_categorized.json
data/ToolE/tasks/: task_10_games.json  task_1_space_images.json  task_2_website_seo.json  task_3_financial_portfolio.json  task_4_resume_job.json  task_5_workout_reminders.json  task_6_travel_itinerary.json  task_7_fathers_day_gifts.json  task_8_language_learning.json  task_9_social_media.json
notebooks/: evaluate.ipynb  toolflood_demo.ipynb
outputs/: metrics_per_model.csv
outputs/poisonrag/toolbench/: metrics_per_model.csv  results_full.json  results_table.csv
outputs/poisonrag/toole/: metrics_per_model.csv  results_full.json  results_table.csv
outputs/rsi/toolbench/: metrics_per_model.csv  results_full.json  results_table.csv
src/: agent.py  metrics.py  utils.py
src/attacks/: README.md  poisonedrag_attack.py  rsi_attack.py  toolflood_attack.py
src/configs/: config.yaml  config_poisonrag.yaml  config_query_generation.yaml  config_rsi.yaml
src/experiments/: analyze_asr_by_b.py  common.py  run_poisonedrag.py  run_rsi.py  run_toolflood.py
src/scripts/: __init__.py  build_vectorstore.py  calculate_metrics_per_model.py  generate_semantic_queries.py  plot_asr_vs_b_level.py  plot_threshold_distributions.py
(+157 files in other folders)
