[project]
name = "toolflood"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.0.0",
    "faiss-cpu>=1.13.2",
    "pyarrow>=17.0.0",
]

[dependency-groups]
dev = [
    "datasets>=3.0.0",
    "fsspec>=2024.6.0",
    "huggingface-hub>=0.36.0",
    "ipykernel",
    "matplotlib",
    "seaborn",
    "langchain>=0.2.14",
    "langchain-azure-ai>=1.0.0",
    "langchain-community>=0.2.14",
    "langchain-huggingface>=0.2.14",
    "langchain-openai>=0.2.14",
    "langchain-xai>=0.2.5",
    "loguru>=0.7.3",
    "nltk>=3.8.1",
    "openpyxl>=3.1.5",
    "pandas>=2.1.1",
    "pydantic>=2.0.1",
    "pyyaml>=6.0",
    "rouge-score>=0.1.2",
    "sentence-transformers>=5.2.0",
    "torch>=2.0.0",
    "tqdm>=4.67.1",
]
